...
                                        <rect key="frame" x="96.5" y="0.0" width="97" height="56.5"/>
                                        <subviews>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" image="intersectIcon" translatesAutoresizingMaskIntoConstraints="NO" id="h3e-bG-Q1C">
                                                <rect key="frame" x="0.0" y="0.0" width="97" height="23"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intersect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRG-V7-SDg">
                                                <rect key="frame" x="2" y="33" width="78.5" height="21.5"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                            <constraint firstItem="zRB-kn-uea" firstAttribute="leading" secondItem="DbM-Ky-hem" secondAttribute="leading" id="bMQ-aC-ml5"/>
                            <constraint firstItem="zRB-kn-uea" firstAttribute="top" secondItem="DbM-Ky-hem" secondAttribute="top" id="saZ-UA-s3x"/>
                            <constraint firstItem="DbM-Ky-hem" firstAttribute="bottom" secondItem="zRB-kn-uea" secondAttribute="bottom" id="tfc-yL-NGc"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="DbM-Ky-hem"/>
                    </view>
                    <navigationItem key="navigationItem" title="Select Playlist" prompt="Choose a playlist to combine with..." id="PvT-wM-oTc">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="5St-E2-1V0">
                            <connections>
                                <action selector="cancelTapped:" destination="ed4-ao-rz9" id="Awy-DA-oE0"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
