...
        if let a = playlistA {
            playlistAButton.setTitle(a.name, for: .normal)
        }
        
        // Since playlistB is nil give the user the option to select
        if playlistB == nil {
            playlistBButton.setTitle("Choose Playlist...", for: .normal)
        }
    }
    
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
        
...
